<resources>
    <string name="app_name">Aaron Schwartz Final Project</string>
    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="sign_in_instead">Sign In Instead</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_instead">Sign Up Instead</string>

    <string name="old_user_label">Already a user?</string>
    <string name="new_user_label">New to our app?</string>

    <string name="homepage_temp_text">Welcome! Here are all games currently in our database. If you
    would like to add a game, please hit the "plus" in the bottom right-hand corner of the screen!</string>

    <string name="release_date_label">Released on: </string>
    <string name="console_label">Available on: </string>
    <string name="image_of_game">Image of game.</string>
    <string name="title_label">Title:</string>
    <string name="description_label">"Description: "</string>
    <string name="submit_button">SUBMIT</string>
    <string name="load_picture">Load Picture</string>
    <string name="add_new_game">Add New Game</string>
    <string name="personal_collection_label">To add a game to a collection, press the add button on
        a game\'s page. To edit or delete a game in your collection, press the three-dot menu on the
        top right of your personal game\'s page.</string>
    <string name="my_collection">My Collection</string>
    <string name="condition_label">Condition:</string>
    <string name="completion_label">Completion:</string>
    <string name="notes_label">Notes:</string>
    <string name="edit_game">Edit Game</string>
    <string name="delete_game">Delete Game</string>
    <string name="search_hint">Search for games by name</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="days">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>

    <string-array name="years">
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
    </string-array>


</resources>
