<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".PersonalDetailActivity">

            <include
                layout="@layout/toolbar_main"
                android:id="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/game_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_image"
                />

            <TextView
                android:id="@+id/describer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                />

            <TextView
                android:id="@+id/releaseDate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/title_input"
                app:layout_constraintTop_toTopOf="@id/title_input"
                app:layout_constraintBottom_toBottomOf="@id/title_input" />

            <TextView
                android:id="@+id/title_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="20dp"
                app:layout_constraintStart_toEndOf="@id/releaseDate_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/describer"
                app:layout_constraintBottom_toTopOf="@id/console"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/console_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/console"
                app:layout_constraintTop_toTopOf="@id/console"
                app:layout_constraintBottom_toBottomOf="@id/console" />

            <TextView
                android:id="@+id/console"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="20dp"
                app:layout_constraintStart_toEndOf="@id/console_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_input"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/condition_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/condition_input"
                app:layout_constraintTop_toTopOf="@id/condition_input"
                app:layout_constraintBottom_toBottomOf="@id/condition_input" />

            <TextView
                android:id="@+id/condition_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="20dp"
                app:layout_constraintStart_toStartOf="@+id/title_input"
                app:layout_constraintTop_toBottomOf="@+id/console"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/completion_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completion_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/completion_input"
                app:layout_constraintTop_toTopOf="@id/completion_input"
                app:layout_constraintBottom_toBottomOf="@id/completion_input" />

            <TextView
                android:id="@+id/completion_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="20dp"
                app:layout_constraintStart_toStartOf="@+id/title_input"
                app:layout_constraintTop_toBottomOf="@+id/condition_input"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/notes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/notes_input"
                app:layout_constraintTop_toTopOf="@id/notes_input"
                app:layout_constraintBottom_toBottomOf="@id/notes_input" />

            <TextView
                android:id="@+id/notes_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="20dp"
                app:layout_constraintStart_toStartOf="@+id/title_input"
                app:layout_constraintTop_toBottomOf="@+id/completion_input"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>